# src/app/Http/Controllers/Api/ClientController.php
@@ -2,47 +2,46 @@
 
 namespace App\Http\Controllers\Api;
 
-use App\Http\Requests\Client\CreateRequest;
 use App\Models\Plan;
 use App\Models\Role;
-use App\Models\User;
-use App\Models\Client;
 use App\Models\Belonging;
+use App\Models\Workspace;
 use Illuminate\Http\JsonResponse;
 use App\Http\Controllers\Controller;
 use Illuminate\Support\Facades\Auth;
+use App\Http\Requests\Client\CreateRequest;
 use App\Http\Requests\Client\UpdateRequest;
 use Illuminate\Auth\Access\AuthorizationException;
 
 class ClientController extends Controller
 {
-    public function info(string $clientId): JsonResponse
+    public function info(string $workspaceId): JsonResponse
     {
         try {
-            $client = Client::find($clientId);
-            $this->authorize('affiliation', $client);
+            $workspace = Workspace::find($workspaceId);
+            $this->authorize('affiliation', $workspace);
             return response()->json([
-                'id' => $client->id,
-                'name' => $client->name,
-                'plan' => $client->plan->name,
+                'id' => $workspace->id,
+                'name' => $workspace->name,
+                'plan' => $workspace->plan->name,
             ]);
         } catch (AuthorizationException $e) {
             return response()->json([], 403);
         }
     }
 
-    public function list(string $clientId): JsonResponse
+    public function list(string $workspaceId): JsonResponse
     {
         try {
-            $client = Client::find($clientId);
-            $this->authorize('affiliation', $client);
+            $workspace = Workspace::find($workspaceId);
+            $this->authorize('affiliation', $workspace);
             $user = Auth::user();
             return response()->json(
-                $user->clients->map(function (Client $client) {
+                $user->workspaces->map(function (Workspace $workspace) {
                     return [
-                        'id' => $client->id,
-                        'name' => $client->name,
-                        'plan' => $client->plan->name,
+                        'id' => $workspace->id,
+                        'name' => $workspace->name,
+                        'plan' => $workspace->plan->name,
                     ];
                 }),
             );
@@ -51,13 +50,13 @@ class ClientController extends Controller
         }
     }
 
-    public function update(string $clientId, UpdateRequest $request): JsonResponse
+    public function update(string $workspaceId, UpdateRequest $request): JsonResponse
     {
         try {
             $validated = $request->validated();
-            $client = Client::find($clientId);
-            $client->update(['name' => $validated['name']]);
-            return response()->json(['client' => $client], 201);
+            $workspace = Workspace::find($workspaceId);
+            $workspace->update(['name' => $validated['name']]);
+            return response()->json(['client' => $workspace], 201);
         } catch (AuthorizationException $e) {
             return response()->json([], 403);
         }
@@ -68,18 +67,18 @@ class ClientController extends Controller
         try {
             $validated = $request->validated();
             $plan = Plan::where('name', 'free')->first();
-            $client = Client::create([
+            $workspace = Workspace::create([
                 'plan_id' => $plan->id,
                 'name' => $validated['name'],
             ]);
             $role = Role::create([
                 'is_account_manager' => 1,
                 'is_book_manager' => 1,
-                'is_client_manager' => 1,
+                'is_workspace_manager' => 1,
             ]);
             Belonging::create([
                 'user_id' => Auth::id(),
-                'client_id' => $client->id,
+                'workspace_id' => $workspace->id,
                 'role_id' => $role->id,
             ]);
         } catch (AuthorizationException $e) {
