# src/app/Http/Controllers/Api/UserController.php
@@ -4,8 +4,8 @@ namespace App\Http\Controllers\Api;
 
 use App\Models\Role;
 use App\Models\User;
-use App\Models\Client;
 use App\Models\Belonging;
+use App\Models\Workspace;
 use App\Models\BookReview;
 use Illuminate\Support\Str;
 use App\Models\BookRentalApply;
@@ -21,11 +21,11 @@ use Illuminate\Auth\Access\AuthorizationException;
 
 class UserController extends Controller
 {
-    public function me(string $clientId): JsonResponse
+    public function me(string $workspaceId): JsonResponse
     {
         try {
-            $client = Client::find($clientId);
-            $this->authorize('affiliation', $client);
+            $workspace = Workspace::find($workspaceId);
+            $this->authorize('affiliation', $workspace);
             $user = Auth::user();
             return response()->json([
                 'id' => $user->id,
@@ -33,14 +33,14 @@ class UserController extends Controller
                 'email' => $user->email,
                 'apiToken' => $user->api_token,
                 'role' => [
-                    'isAccountManager' => $user->role($clientId)->is_account_manager,
-                    'isBookManager' => $user->role($clientId)->is_book_manager,
-                    'isClientManager' => $user->role($clientId)->is_client_manager,
+                    'isAccountManager' => $user->role($workspaceId)->is_account_manager,
+                    'isBookManager' => $user->role($workspaceId)->is_book_manager,
+                    'isClientManager' => $user->role($workspaceId)->is_workspace_manager,
                 ],
-                'clients' => $user->clients->map(function ($client) {
+                'clients' => $user->workspaces->map(function ($workspace) {
                     return [
-                        'id' => $client->id,
-                        'name' => $client->name,
+                        'id' => $workspace->id,
+                        'name' => $workspace->name,
                     ];
                 }),
             ]);
@@ -49,20 +49,20 @@ class UserController extends Controller
         }
     }
 
-    public function list(string $clientId): JsonResponse
+    public function list(string $workspaceId): JsonResponse
     {
         try {
-            $client = Client::find($clientId);
-            $this->authorize('affiliation', $client);
+            $workspace = Workspace::find($workspaceId);
+            $this->authorize('affiliation', $workspace);
             return response()->json([
-                'users' => $client->users->map(fn (User $user) => [
+                'users' => $workspace->users->map(fn (User $user) => [
                     'id' => $user->id,
                     'name' => $user->name,
                     'email' => $user->email,
                     'role' => [
-                        'isAccountManager' => $user->role($clientId)->is_account_manager,
-                        'isBookManager' => $user->role($clientId)->is_book_manager,
-                        'isClientManager' => $user->role($clientId)->is_client_manager,
+                        'isAccountManager' => $user->role($workspaceId)->is_account_manager,
+                        'isBookManager' => $user->role($workspaceId)->is_book_manager,
+                        'isClientManager' => $user->role($workspaceId)->is_workspace_manager,
                     ],
                 ]),
             ]);
@@ -71,13 +71,13 @@ class UserController extends Controller
         }
     }
 
-    public function create(string $clientId, CreateRequest $request): JsonResponse
+    public function create(string $workspaceId, CreateRequest $request): JsonResponse
     {
         try {
-            $client = Client::find($clientId);
-            $this->authorize('affiliation', $client);
+            $workspace = Workspace::find($workspaceId);
+            $this->authorize('affiliation', $workspace);
             $validated = $request->validated();
-            return DB::transaction(function () use ($validated, $client): JsonResponse {
+            return DB::transaction(function () use ($validated, $workspace): JsonResponse {
                 $user = User::firstOrCreate([
                     'email' => $validated['email'],
                 ], [
@@ -87,15 +87,15 @@ class UserController extends Controller
                 $role = Role::create([
                     'is_account_manager' => in_array('アカウント管理', $validated['roles'], true),
                     'is_book_manager' => in_array('書籍管理', $validated['roles'], true),
-                    'is_client_manager' => in_array('組織管理', $validated['roles'], true),
+                    'is_workspace_manager' => in_array('組織管理', $validated['roles'], true),
                 ]);
 
-                if (Belonging::where('user_id', $user->id)->where('client_id', $client->id)->exists()) {
+                if (Belonging::where('user_id', $user->id)->where('workspace_id', $workspace->id)->exists()) {
                     return response()->json(['errors' => ['email' => ['該当ユーザーはすでに登録されています。']]], 402);
                 }
                 Belonging::create([
                     'user_id' => $user->id,
-                    'client_id' => $client->id,
+                    'workspace_id' => $workspace->id,
                     'role_id' => $role->id,
                 ]);
                 return response()->json();
@@ -105,12 +105,12 @@ class UserController extends Controller
         }
     }
 
-    public function update(string $clientId, UpdateRequest $request): JsonResponse
+    public function update(string $workspaceId, UpdateRequest $request): JsonResponse
     {
         try {
-            $client = Client::find($clientId);
-            $this->authorize('affiliation', $client);
-            return DB::transaction(function () use ($request, $clientId): JsonResponse {
+            $workspace = Workspace::find($workspaceId);
+            $this->authorize('affiliation', $workspace);
+            return DB::transaction(function () use ($request, $workspaceId): JsonResponse {
                 $user = User::find($request->get('id'));
 
                 if (!$user) {
@@ -120,10 +120,10 @@ class UserController extends Controller
                     'name' => $request->get('name'),
                     'email' => $request->get('email'),
                 ]);
-                $user->role($clientId)->update([
+                $user->role($workspaceId)->update([
                     'is_account_manager' => in_array('アカウント管理', $request->get('roles'), true),
                     'is_book_manager' => in_array('書籍管理', $request->get('roles'), true),
-                    'is_client_manager' => in_array('組織管理', $request->get('roles'), true),
+                    'is_workspace_manager' => in_array('組織管理', $request->get('roles'), true),
                 ]);
                 return response()->json();
             });
@@ -132,11 +132,11 @@ class UserController extends Controller
         }
     }
 
-    public function delete(string $clientId, DeleteRequest $request): JsonResponse
+    public function delete(string $workspaceId, DeleteRequest $request): JsonResponse
     {
         try {
-            $client = Client::find($clientId);
-            $this->authorize('affiliation', $client);
+            $workspace = Workspace::find($workspaceId);
+            $this->authorize('affiliation', $workspace);
             DB::transaction(function () use ($request): void {
                 $request->collect('user_ids')->each(function ($userId): void {
                     BookPurchaseApply::where('user_id', $userId)->delete();
