# src/app/Models/User.php
@@ -8,20 +8,19 @@ use Illuminate\Foundation\Auth\User as Authenticate;
 use Illuminate\Database\Eloquent\Relations\BelongsToMany;
 
 /**
- * App\Models\User.
+ * App\Models\User
  *
  * @property int $id
  * @property string $name
  * @property string $email
- * @property null|string $google_access_token
- * @property null|string $api_token
- * @property null|\Illuminate\Support\Carbon $created_at
- * @property null|\Illuminate\Support\Carbon $updated_at
- * @property \App\Models\Client[]|\Illuminate\Database\Eloquent\Collection $clients
- * @property null|int $clients_count
- * @property \Illuminate\Database\Eloquent\Collection|\Laravel\Sanctum\PersonalAccessToken[] $tokens
- * @property null|int $tokens_count
- *
+ * @property string|null $google_access_token
+ * @property string|null $api_token
+ * @property \Illuminate\Support\Carbon|null $created_at
+ * @property \Illuminate\Support\Carbon|null $updated_at
+ * @property-read \Illuminate\Database\Eloquent\Collection|\Laravel\Sanctum\PersonalAccessToken[] $tokens
+ * @property-read int|null $tokens_count
+ * @property-read \Illuminate\Database\Eloquent\Collection|\App\Models\Workspace[] $workspaces
+ * @property-read int|null $workspaces_count
  * @method static Builder|User newModelQuery()
  * @method static Builder|User newQuery()
  * @method static Builder|User query()
@@ -40,19 +39,19 @@ class User extends Authenticate
 
     protected $guarded = [];
 
-    public function clients(): BelongsToMany
+    public function workspaces(): BelongsToMany
     {
         return $this->belongsToMany(
-            Client::class,
+            Workspace::class,
             'belongings'
         );
     }
 
-    public function role(string $clientId)
+    public function role(string $workspaceId)
     {
         return $this->belongsToMany(
             Role::class,
             'belongings',
-        )->where('client_id', $clientId)->first();
+        )->where('workspace_id', $workspaceId)->first();
     }
 }
